# ASC24-Final-LLM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  baseline.py  batched_inference.slurm  cmmlu.slurm  data.json  model.cache  output.json  preprocessed_dataset.json  requirements.txt  run_client.sh  run_cmmlu.sh  run_server.sh
convert_cmmlu/: README.md  compara.py  label.py  name_en2zh.py  output.py  question.py
convert_cmmlu/answer/: agronomy.json  anatomy.json  ancient_chinese.json  arts.json  astronomy.json  business_ethics.json  chinese_civil_service_exam.json  chinese_driving_rule.json  chinese_food_culture.json  chinese_foreign_policy.json  chinese_history.json  chinese_literature.json  chinese_teacher_qualification.json  clinical_knowledge.json  college_actuarial_science.json  college_education.json  college_engineering_hydrology.json  college_law.json  college_mathematics.json  college_medical_statistics.json  college_medicine.json  computer_science.json  computer_security.json  conceptual_physics.json  construction_project_management.json  economics.json  education.json  electrical_engineering.json  elementary_chinese.json  elementary_commonsense.json  elementary_information_and_technology.json  elementary_mathematics.json  ethnology.json  food_science.json  genetics.json  global_facts.json  high_school_biology.json  high_school_chemistry.json  high_school_geography.json  high_school_mathematics.json  (+27 more)
convert_cmmlu/output_json/: arts.json  chinese_civil_service_exam.json  chinese_food_culture.json  chinese_foreign_policy.json  chinese_teacher_qualification.json  college_actuarial_science.json  college_engineering_hydrology.json  college_medicine.json  computer_science.json  conceptual_physics.json  construction_project_management.json  (+22 more)
exllamav2/: config.py  model.py  module.py
mmlu_data/: abstract_algebra_test.csv  anatomy_test.csv  astronomy_test.csv  business_ethics_test.csv  clinical_knowledge_test.csv  college_biology_test.csv  college_chemistry_test.csv  college_computer_science_test.csv  college_mathematics_test.csv  college_medicine_test.csv  college_physics_test.csv  computer_security_test.csv  conceptual_physics_test.csv  econometrics_test.csv  electrical_engineering_test.csv  elementary_mathematics_test.csv  formal_logic_test.csv  global_facts_test.csv  high_school_biology_test.csv  high_school_chemistry_test.csv  high_school_computer_science_test.csv  high_school_european_history_test.csv  high_school_geography_test.csv  high_school_government_and_politics_test.csv  high_school_macroeconomics_test.csv  high_school_mathematics_test.csv  high_school_microeconomics_test.csv  high_school_physics_test.csv  high_school_psychology_test.csv  high_school_statistics_test.csv  high_school_us_history_test.csv  high_school_world_history_test.csv  human_aging_test.csv  human_sexuality_test.csv  international_law_test.csv  jurisprudence_test.csv  logical_fallacies_test.csv  machine_learning_test.csv  management_test.csv  marketing_test.csv  (+17 more)
output_json/: agronomy.json  anatomy.json  ancient_chinese.json  astronomy.json  business_ethics.json  chinese_driving_rule.json  chinese_history.json  chinese_literature.json  clinical_knowledge.json  college_education.json  college_law.json  college_mathematics.json  college_medical_statistics.json  computer_security.json  economics.json  electrical_engineering.json  elementary_commonsense.json  elementary_mathematics.json  genetics.json  high_school_biology.json  high_school_chemistry.json  high_school_geography.json  high_school_mathematics.json  high_school_physics.json  high_school_politics.json  machine_learning.json  management.json  modern_chinese.json  nutrition.json  professional_medicine.json  public_relations.json  security_study.json  sports_science.json  traditional_chinese_medicine.json
src/: main.cpp  multinodes_client.cpp  multinodes_server.cpp
test_json/: agronomy.json  ancient_chinese.json  arts.json  business_ethics.json  chinese_civil_service_exam.json  chinese_driving_rule.json  chinese_food_culture.json  chinese_foreign_policy.json  chinese_literature.json  chinese_teacher_qualification.json  clinical_knowledge.json  college_actuarial_science.json  college_education.json  college_law.json  college_medical_statistics.json  college_medicine.json  computer_security.json  conceptual_physics.json  education.json  electrical_engineering.json  elementary_chinese.json  elementary_information_and_technology.json  ethnology.json  global_facts.json  high_school_mathematics.json  international_law.json  journalism.json  legal_and_moral_basis.json  logical.json  management.json  marketing.json  marxist_theory.json  philosophy.json  professional_accounting.json  public_relations.json  security_study.json  sports_science.json  traditional_chinese_medicine.json  world_history.json
test_json_mmlu/: abstract_algebra_test.json  anatomy_test.json  astronomy_test.json  business_ethics_test.json  clinical_knowledge_test.json  college_biology_test.json  college_chemistry_test.json  college_computer_science_test.json  college_mathematics_test.json  college_medicine_test.json  college_physics_test.json  computer_security_test.json  conceptual_physics_test.json  econometrics_test.json  electrical_engineering_test.json  elementary_mathematics_test.json  formal_logic_test.json  global_facts_test.json  high_school_biology_test.json  high_school_chemistry_test.json  high_school_computer_science_test.json  high_school_european_history_test.json  high_school_geography_test.json  high_school_government_and_politics_test.json  high_school_macroeconomics_test.json  high_school_mathematics_test.json  high_school_microeconomics_test.json  high_school_physics_test.json  high_school_psychology_test.json  high_school_statistics_test.json  high_school_us_history_test.json  high_school_world_history_test.json  human_aging_test.json  human_sexuality_test.json  international_law_test.json  jurisprudence_test.json  logical_fallacies_test.json  machine_learning_test.json  management_test.json  marketing_test.json  (+16 more)
tests/: test_mmlu.py
(+54 files in other folders)
